objects/Handwrytten__hndwrtObjAutomatedNoteQueue__c.object
<CustomObject>
    <description>Handwrytten Automated Note Queue</description>
    <fields>
        <fullName>Handwrytten__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Handwrytten_Automated_Note_Queue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Automated_Note_Template__c</fullName>
        <label>Automated Note Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Handwrytten_Automated_Note_Queue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Handwrytten_Automated_Note_Queue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Handwrytten_Automated_Note_Queue</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Handwrytten Queue</label>
    <nameField>
        <displayFormat>HndwrtAQ-{00000000}</displayFormat>
        <label>Automated Queue Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Handwrytten Automated Note Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>